# vibemodule

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  setup-beads.sh
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml
cmake/: CPM.cmake
docs/: ARCHITECTURE.md  PARAMETERS.md
libs/clouds-dsp/: CMakeLists.txt
libs/clouds-dsp/include/clouds/: clouds_reverb.h  frame.h  fx_engine.h  reverb.h
libs/clouds-dsp/include/stmlib/: stmlib.h
libs/clouds-dsp/include/stmlib/dsp/: cosine_oscillator.h  dsp.h
proompts/: act-on-review.md  claude-code-setup.md  cursor-cline-setup.md  initial-prompt.md  request-review.md  start-task.md
proompts/docs/: README.md  agent-guidelines.md  beads-agent-mail-integration.md  clouds-reverb-architecture.md  example.md  migration-guide.md  platform-guides.md  prompt-templates.md  task-format-guide.md
proompts/tasks/: example-task.md
tests/: CMakeLists.txt  benchmark_reverb.cpp  test_allpass.cpp  test_clouds_reverb.cpp  test_fx_engine.cpp  test_stmlib_dsp.cpp
